src/test/ui/parser/issue-3036.stderr
error: expected one of `.`, `;`, `?`, or an operator, found `}`
  --> $DIR/issue-3036.rs:6:1
   |
LL |     let x = 3
   |              - expected one of `.`, `;`, `?`, or an operator here
LL | }
   | ^ unexpected token

error: aborting due to previous error

